@@ -28,7 +28,6 @@ parts:
             - pygal>=2.0.0
             - typogrify>=2.0.4
             - phpserialize>=1.3
-            - webassets>=0.10.1
             - ghp-import2>=1.0.0
             - ws4py==0.3.5
             - watchdog==0.8.3
